<resources>
    <string name="app_name">ToDoApp</string>
    <string name="email_string">E-mail:</string>
    <string name="password_string">Password:</string>
    <string name="login_text">LOGIN</string>
    <string name="sign_in_text">SIGN IN</string>
    <string name="name_string">Name</string>
    <string name="surname_string">Surname</string>
    <string name="content_string">Content</string>


</resources>
